fix: font size was a bit too small

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -438,7 +438,7 @@
     }
 
     &__logo-text {
-        font-size: var(--text-medium);
+        font-size: var(--text-largest);
         font-weight: var(--font-weight-very-bold);
         color: var(--color-foreground-secondary);
 
